<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".LoginActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="153dp"
        android:layout_marginStart="131dp"
        android:layout_marginTop="16dp"
        android:text="@string/login"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iLog"
        android:layout_width="167dp"
        android:layout_height="103dp"
        android:layout_marginEnd="119dp"
        android:layout_marginStart="98dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/logodos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/eCorreo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="96dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/correo"
        android:inputType="textEmailAddress"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/iemail"
        app:layout_constraintTop_toBottomOf="@+id/iLog" />

    <ImageView
        android:id="@+id/iemail"
        android:layout_width="28dp"
        android:layout_height="21dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="196dp"
        android:src="@drawable/email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/eContraseña"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="96dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/contraseña"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.181"
        app:layout_constraintStart_toEndOf="@+id/ipass"
        app:layout_constraintTop_toBottomOf="@+id/eCorreo" />

    <ImageView
        android:id="@+id/ipass"
        android:layout_width="wrap_content"
        android:layout_height="21dp"
        android:layout_marginBottom="333dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="44dp"
        android:src="@drawable/pass"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iemail"
        app:layout_constraintVertical_bias="0.028" />

    <Button
        android:id="@+id/bRegistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="259dp"
        android:layout_marginStart="128dp"
        android:layout_marginTop="26dp"
        android:background="@drawable/boton_redondo"
        android:onClick="enviardatos"
        android:text="@string/aceptar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eContraseña"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tRegistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="84dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:text="@string/registro"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/bRegistro"
        app:layout_constraintTop_toBottomOf="@+id/eContraseña"
        app:layout_constraintVertical_bias="0.14" />


</android.support.constraint.ConstraintLayout>